# legionclaw

./: .gitignore  README.md  README_build_perception_scripts.md  build_perception_arm.sh  build_perception_x64.sh  clean_perception.sh  run_perception.sh
launch/: launch_all.sh
modules/: todo.md
modules/common/base_message/: message.h  message.proto  message_status.hpp
modules/common/binary/: binary.cc  binary.h
modules/common/configs/: config_gflags.cc  vehicle_config_helper.cc  vehicle_config_helper.h
modules/common/enum/: enum.h
modules/common/fault/: fault_client.hpp  fault_handle.hpp
modules/common/file/: file.cc  file.h
modules/common/integration_service/: dds_2_ros1.yaml  integration_service.yaml  ros1_2_dds.yaml
modules/common/interface/: adc_trajectory.hpp  alarm_message.hpp  bbox_2d.hpp  (+164 more)
modules/localization/: CMakeLists.txt
modules/localization/conf/: localization.json
modules/localization/make/: CTestConfiguration.ini
modules/localization/scripts/: build.arm64.sh
modules/localization/src/apps/: localization.cpp  localization.h  main.cpp
modules/localization/src/pose_estimator/: odom_system.hpp  pose_estimator.cpp  pose_estimator.hpp  pose_system.hpp
modules/localization/src/pose_estimator/kkl/alg/: unscented_kalman_filter.hpp
modules/map/: CMakeLists.txt
modules/map/conf/: map.json
modules/map/config/: ls16.yaml  mid360.yaml
modules/map/launch/: mapping_ls16.launch  mapping_velodyne16.launch
modules/map/make/: CTestConfiguration.ini
modules/map/rviz/: loam_livox.rviz
modules/map/src/apps/: main.cpp
modules/map/src/slam/: GNSS_Processing.hpp  IMU_Processing.hpp  common_lib.h  fast_lio_sam.cpp  fast_lio_sam.h  laserMappingNode.cpp  laserMappingNode.h  preprocess.cpp  preprocess.h  use-ikfom.hpp
modules/message/ros2/src/legion/ros2_interface/: CMakeLists.txt  package.xml
modules/message/ros2/src/legion/ros2_interface/msg/: ADCTrajectory.msg  APAParkingStatus.msg  AlarmMessage.msg  CameraParkingInfo.msg  CameraParkingInfoList.msg  CameraParkingStopper.msg  Chassis.msg  CommCommand.msg  CommandRespond.msg  CompressedImage.msg  ControlAnalysis.msg  ControlCommand.msg  DiagnosticArray.msg  DiagnosticStatus.msg  DrivableRegion.msg  Events.msg  Faults.msg  FreeSpace.msg  GlobalRouteMsg.msg  Gnss.msg  GuideInfo.msg  HMIADCTrajectory.msg  HMIDiagnosticArray.msg  HMIObstacleList.msg  HMIObuCmdMsg.msg  HMIParkingInfo.msg  HMIParkingInfoList.msg  HMIParkingStateDisplay.msg  HMITrajectory.msg  HMIVehicleMsg.msg  Image.msg  Imu.msg  Ins.msg  LaneInfoExtend.msg  LaneList.msg  LocalMap.msg  Location.msg  ModuleStatus.msg  NaviInfoMsg.msg  ObstacleList.msg  (+33 more)
modules/perception/lidar/lidar_detect_voxel/: .gitignore  CMakeLists.txt  lidar_detect  readme.md
modules/perception/lidar/lidar_detect_voxel/centerpoint/: centerpoint.cpp
modules/perception/lidar/lidar_detect_voxel/include/: centerpoint.h  common.h
modules/perception/lidar/lidar_detect_voxel/make/: CMakeLists.txt.arm64  CMakeLists.txt.lib.x64  CMakeLists.txt.mdc  CMakeLists.txt.pallas  CMakeLists.txt.x64
modules/perception/lidar/lidar_detect_voxel/scripts/: build.pallas.sh  build.x64.sh  run.sh
modules/perception/lidar/lidar_detect_voxel/src/apps/: lidar_detect.cpp  lidar_detect.h  main.cpp
modules/perception/lidar/lidar_detect_voxel/src/common/: local_view.h
modules/perception/lidar/lidar_detect_voxel/src/conf/: lidar_detect_conf.hpp
modules/perception/lidar/lidar_detect_voxel/src/message_manager/: message_manager.h
modules/perception/lidar/lidar_detect_voxel/src/message_manager/dds/: dds_message_manager.h  dds_message_manager.hpp
modules/perception/lidar/lidar_detect_voxel/src/message_manager/lcm/: lcm_message_manager.h  lcm_message_manager.hpp
modules/perception/lidar/lidar_detect_voxel/src/message_manager/ros/: ros_message_manager.h  ros_message_manager.hpp
modules/perception/lidar/lidar_detect_voxel/src/message_manager/ros2/: ros2_message_manager.h  ros2_message_manager.hpp
modules/perception/lidar/multi_lidar_splicing/: .gitignore  CMakeLists.txt  README.md
modules/perception/lidar/multi_lidar_splicing/conf/: config.json
modules/perception/lidar/multi_lidar_splicing/conf/sensors/: lidar_left.json
modules/perception/lidar/multi_lidar_splicing/make/: CMakeLists.txt.x64
modules/perception/lidar/multi_lidar_splicing/scripts/: build.arm64.sh  build.x64.sh  convert_res_to_splicing_conf.py
modules/perception/lidar/multi_lidar_splicing/src/app/: main.cpp  multi_lidar_splicing.cpp  multi_lidar_splicing.h
modules/perception/lidar/multi_lidar_splicing/src/sensors/: lidar.cpp  lidar.h
modules/planning/src/common/math/: package.xml
modules/planning/src/common/math/include/: mat3.hpp  matrix_operations.h  state_point.h
modules/planning/src/common/math/include/smoothing_spline/: affine_constraint.h  macro.h  spline_2d.h  spline_2d_constraint.h  spline_2d_kernel.h  spline_2d_seg.h  spline_2d_solver.h  spline_seg_kernel.h
modules/planning/src/common/math/include/spiral_curve/: cubic_spiral_curve.h  quintic_spiral_curve.h  spiral_curve.h  spiral_formula.h
modules/planning/src/common/math/include/spline/: cubic_spline.h  spline.h
modules/planning/src/common/math/src/smoothing_spline/: affine_constraint.cc  spline_2d.cc  spline_2d_constraint.cc  spline_2d_kernel.cc  spline_2d_seg.cc  spline_2d_solver.cc  spline_seg_kernel.cc
modules/planning/src/common/math/src/spiral_curve/: cubic_spiral_curve.cc  quintic_spiral_curve.cc  spiral_curve.cc  spiral_formula.cc
modules/planning/src/common/math/src/spline/: cubic_spline.cpp  spline.cpp
modules/prediction/: .gitignore
skills/legionclaw-control/: SKILL.md
skills/legionclaw-lidar-cluster-detect/: SKILL.md
skills/legionclaw-lidar-ground-segmentation/: SKILL.md
skills/legionclaw-lidar-voxel-detect/: SKILL.md
skills/legionclaw-localization/: SKILL.md
skills/legionclaw-map/: SKILL.md
skills/legionclaw-motion-manager-fusion/: SKILL.md
skills/legionclaw-overview/: SKILL.md
skills/legionclaw-planning/: SKILL.md
skills/legionclaw-prediction/: SKILL.md
skills/legionclaw-routing/: SKILL.md
(+2027 files in other folders)
