<?xml version="1.0"?>
<package format="2">
  <name>math</name>
  <version>1.12.0</version>
  <description>The math package</description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
  <author email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Hatem Darweesh</author>
  <license>Apache 2</license>

  <!-- <buildtool_depend>autoware_build_flags</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake_modules</buildtool_depend>

  <depend>interface</depend>
</package>
